--- a/app/design/adminhtml/default/default/template/sales/order/invoice/create/items.phtml
+++ b/app/design/adminhtml/default/default/template/sales/order/invoice/create/items.phtml
@@ -182,9 +182,10 @@ function checkButtonsRelation() {
 
 (function() {
     const sendEmailCheckbox = document.getElementById('send_email');
-    if (sendEmailCheckbox) {
-        const notifyCustomerCheckbox = document.getElementById('notify_customer');
-        const invoiceCommentText = document.getElementById('invoice_comment_text');
+    const notifyCustomerCheckbox = document.getElementById('notify_customer');
+    const invoiceCommentText = document.getElementById('invoice_comment_text');
+
+    if (sendEmailCheckbox && notifyCustomerCheckbox) {
         sendEmailCheckbox.addEventListener('change', bindSendEmail);
         bindSendEmail();
     }
