--- a/app/design/adminhtml/default/default/template/sales/order/create/sidebar/items.phtml
+++ b/app/design/adminhtml/default/default/template/sales/order/create/sidebar/items.phtml
@@ -14,7 +14,7 @@
     <div class="head">
         <h5><?= $this->getHeaderText() ?> <span class="normal">(<?= $this->getItemCount() ?>)</span></h5>
         <a href="#" title="<?= Mage::helper('sales')->__('Refresh') ?>" onclick="order.loadArea('sidebar_<?= $this->getDataId() ?>', 'sidebar_data_<?= $this->getDataId() ?>');return false;">
-            <img src="<?= $this->getSkinUrl('images/fam_refresh.gif') ?>" alt="<?= Mage::helper('sales')->__('Refresh') ?>" width="16" height="16"/>
+            <?= $this->getIconSvg('refresh') ?>
         </a>
     </div>
     <div class="content">
@@ -41,9 +41,9 @@
                 <th><?= Mage::helper('sales')->__('Price') ?></th>
                 <?php endif ?>
                 <?php if($this->canRemoveItems()): ?>
-                <th class="a-center"><img src="<?= $this->getSkinUrl('images/fam_bin.gif') ?>" alt="<?= Mage::helper('sales')->__('Remove') ?>" title="<?= Mage::helper('sales')->__('Remove') ?>" width="16" height="16"/></th>
+                <th class="a-center"><?= $this->getIconSvg('trash') ?></th>
                 <?php endif ?>
-                <th class="a-center"><img src="<?= $this->getSkinUrl('images/fam_package_go.gif') ?>" alt="<?= Mage::helper('sales')->__('Add To Order') ?>" title="<?= Mage::helper('sales')->__('Add To Order') ?>" width="16" height="16"/></th>
+                <th class="a-center"></th>
             </tr>
             <?php foreach ($this->getItems() as $_item): ?>
             <tr>
