--- a/app/design/adminhtml/default/default/template/widget/tabs.phtml
+++ b/app/design/adminhtml/default/default/template/widget/tabs.phtml
@@ -23,7 +23,7 @@
 <?php if (!$this->canShowTab($_tab)): continue;  endif; ?>
     <li <?php if($this->getTabIsHidden($_tab)): ?> style="display:none"<?php endif ?>>
         <a href="<?= $this->getTabUrl($_tab) ?>" id="<?= $this->getTabId($_tab) ?>" name="<?= $this->getTabId($_tab, false) ?>" title="<?= $this->quoteEscape($this->getTabTitle($_tab)) ?>" class="tab-item-link <?= $this->getTabClass($_tab) ?><?php if (preg_match('/\s?ajax\s?/', $_tab->getClass() ?? '')) {?> notloaded<?php }?>">
-            <span><span class="changed" title="<?= $this->quoteEscape($this->__('The information in this tab has been changed.')) ?>"></span><span class="error" title="<?= $this->quoteEscape($this->__('This tab contains invalid data. Please solve the problem before saving.')) ?>"></span><?= $this->getTabLabel($_tab) ?></span>
+            <span><span class="changed" title="<?= $this->quoteEscape($this->__('The information in this tab has been changed.')) ?>"><?= $this->getIconSvg('device-floppy') ?></span><span class="error" title="<?= $this->quoteEscape($this->__('This tab contains invalid data. Please solve the problem before saving.')) ?>"><?= $this->getIconSvg('alert-triangle') ?></span><?= $this->getTabLabel($_tab) ?></span>
         </a>
         <div id="<?= $this->getTabId($_tab) ?>_content" style="display:none;"><?= $this->getTabContent($_tab) ?></div>
     </li>
