--- a/app/design/install/default/default/template/install/state.phtml
+++ b/app/design/install/default/default/template/install/state.phtml
@@ -5,17 +5,34 @@
  * @package     default_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2020-2025 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
 /** @var Mage_Install_Block_State $this */
 ?>
-<div style="border:1px solid #ccc; background:#f6f6f6;">
-    <h2 style="margin-bottom:0; border-bottom:1px solid #ccc; padding:4px 10px; color:#3c5974; font-size:1.4em;"><?= $this->__('Installation') ?></h2>
-<ol style="padding:10px; border-top:1px solid #fff;">
-<?php foreach($steps as $_step): ?>
-    <li <?php if($_step->getActive()): ?>style="color:green; font-weight:bold; "<?php endif ?>><?= $this->__($_step->getCode()) ?></li>
-<?php endforeach ?>
-</ol>
+<div class="progress-stepper">
+    <h2><?= $this->__('Installation Progress') ?></h2>
+    <ol class="stepper-list">
+        <?php
+        $stepNumber = 0;
+        $activeFound = false;
+        foreach($steps as $_step):
+            $stepNumber++;
+            $isActive = $_step->getActive();
+            $isCompleted = !$activeFound && !$isActive;
+            if ($isActive) {
+                $activeFound = true;
+            }
+
+            $classes = ['stepper-item'];
+            if ($isCompleted) $classes[] = 'completed';
+            if ($isActive) $classes[] = 'active';
+        ?>
+        <li class="<?= implode(' ', $classes) ?>" data-step="<?= $stepNumber ?>">
+            <div class="stepper-circle" aria-label="Step <?= $stepNumber ?>"></div>
+            <span class="stepper-label"><?= $this->__($_step->getCode()) ?></span>
+        </li>
+        <?php endforeach ?>
+    </ol>
 </div>
